--- a/views/home.html
+++ b/views/home.html
@@ -5,12 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link href="../styles/style.css" rel="stylesheet">
     <title>Title</title>
 </head>
 <body>
 
-    <h1>Dating Webpage</h1>
-    <img src="../images/dating.png" alt="dating">
+    <h1>All About Food</h1>
 </body>
 </html>
