added new pages

--- a/views/breakfast.html
+++ b/views/breakfast.html
@@ -1,15 +1,12 @@
-<!-- home.html-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Title</title>
+
+    <title>Breakfast</title>
 </head>
 <body>
-
-    <h1>All About Food</h1>
-    <img src="images/dating.png" alt="dating">
-
+    <h1>I like breakfast</h1>
 </body>
 </html>
